<resources>
    <string name="app_name">MyCalculator</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button_PLUS">+</string>
    <string name="Button_MINUS">-</string>
    <string name="Button_Times">X</string>
    <string name="Button_DOT">.</string>
    <string name="Button_ZERO">0</string>
    <string name="Button_CLEAR">CLEAR</string>
    <string name="Button_DIVIDE">/</string>
    <string name="Button_EQUAL">=</string>
    <string name="input">input</string>
</resources>
